Make Separator always perfectly pixel-aligned

Separator is the component which is the most important is always exactly
aligned to the  pixel grid, even with fractional scaling (or inside
Flickables that have a non integer contentY)

Otherwise without antialiasing the line will be sometimes one pixel,
sometimes two, and with antialiasing they will often look blurry
and with an apparent different color, depending how much sharp is rendered
in that particular position

Use an internal Rectangle that has both position and size adjusted in
order to fall exactly on the pixel grid

BUG:510353